# zuul

./: .editorconfig  Cargo.toml  README.md  build.sh  config.yaml  nft-void-refresh.timer  template.j2  template.jinja2  zuul-refresh.service
.github/workflows/: release.yml  rust.yml
src/: cidr.rs  cli.rs  config.rs  istr.rs  loader.rs  main.rs  nft.rs  render.rs  sandbox.rs  sets.rs  threadpool.rs
systemd/: rostschutz-main.service  rostschutz-refresh.service  rostschutz-refresh.timer  zuul-main.service  zuul-refresh.service  zuul-refresh.timer
systemd/rostschutz-.service.d/: harden.conf
systemd/zuul-.service.d/: harden.conf
test/: config-perf.yaml  config-test.yaml  flamegraph_btree.svgz  flamegraph_vec.svgz  gen_v4_data.sh  gen_v6_data.sh
tests/: cli_golden.rs  nft_syntax.rs
tests/profiling/: flamegraph_btree.svgz  flamegraph_vec.svgz
tests/testdata/: bogus.txt  config-perf.yaml  config-prod.yaml  config-test.yaml  ipv4-test.netset
tests/testdata/stdout/: cli_expected_config.txt  cli_expected_refresh.txt  cli_expected_start.txt
